release 1.0.10 Signed-off-by:Phillip Kruger <phillip.kruger@gmail.com>